edit comments to fix formatting - unopened tags

--- a/Demand Forecast for e-scooter business.ipynb
+++ b/Demand Forecast for e-scooter business.ipynb
@@ -593,7 +593,7 @@
     "        <li>  there's some extreme outliers in Trip Distance and Trip Duration </li>\n",
     " <li> Some numeric columns are not showing, we need to take  look on those while cleaning the data and turn them into numeric</li>\n",
     "    </ul>\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -836,7 +836,7 @@
    "source": [
     "<div class=\"alert alert-info\">\n",
     "the missing values percentage is insignificant, so we'll just delete their rows!\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -855,7 +855,7 @@
    "source": [
     "<div class=\"alert alert-info\">\n",
     "Let's remove redundent columns that we aren't extracting any new values from nor using in the model\n",
-    "    <div>\n"
+    "    </div>\n"
    ]
   },
   {
@@ -1220,7 +1220,7 @@
    "source": [
     "<div class=\"alert alert-info\">\n",
     "Let's take a look on the Device ID column, from this column we can see how many devices were used and the stats for each one!\n",
-    "    <div>"
+    "    </div>"
    ]
   },
   {
@@ -1616,7 +1616,7 @@
     "        <li>Trip Durations Mean was around 70000 seconds </li>\n",
     "        <li>The trip distances mean was about 4000000 meters because it was largely impacted by the outliers, while the median was about 110000 meters which is a realistic amount</li>\n",
     "    </ul>\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1653,7 +1653,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-danger\">\n",
-    "There's negative values and extrem outliers that we need to remove</div>"
+    "There's negative values and extreme outliers that we need to remove</div>"
    ]
   },
   {
